--- a/latex/classRGESolver.tex
+++ b/latex/classRGESolver.tex
@@ -46,19 +46,19 @@ void \mbox{\hyperlink{classRGESolver_a51938deb00fbca684c8e4e5b10a239ad}{Set\+\_\
 void \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolve}} (std\+::string method, double muI, double muF)
 \begin{DoxyCompactList}\small\item\em Performs the R\+GE evolution. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classRGESolver_a7b6c7701ddfa1bd3f6f34e7794fc1dca}{Generate\+S\+M\+Initial\+Conditions}} (double mu, std\+::string basis, std\+::string method, bool input\+C\+KM=true)
-\begin{DoxyCompactList}\small\item\em Generates the initial conditions for Standard Model\textquotesingle{}s parameters (gauge couplings, Yukawa coupling, quartic coupling and Higgs\textquotesingle{} boson mass). \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Generates the initial conditions for Standard Model\textquotesingle{}s parameters (gauge couplings, Yukawa coupling, quartic coupling and Higgs\textquotesingle{} boson mass) at the scale {\ttfamily mu$<$}, using one-\/loop pure SM beta functions. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classRGESolver_a7c0c4303beb14f728a70542c8583b3a7}{Evolve\+S\+M\+Only}} (std\+::string method, double muI, double muF)
 \begin{DoxyCompactList}\small\item\em Same as \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolve}}, but only for the SM parameters. The user should use this method instead of \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolve}} when interested in pure SM running. ~\newline
- \end{DoxyCompactList}\end{DoxyCompactItemize}
+ \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{classRGESolver_ad499b4ef512ac892c4f5a71b9fa0daf4}{Compute\+C\+K\+M\+And\+Fermion\+Masses}} ()
+\begin{DoxyCompactList}\small\item\em Compute C\+KM matrix and the mass of the fermions. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \end{Indent}
 \begin{Indent}\textbf{ Input/output}\par
 {\em ~\newline
  }\begin{DoxyCompactItemize}
 \item 
-void \mbox{\hyperlink{classRGESolver_ad499b4ef512ac892c4f5a71b9fa0daf4}{Compute\+C\+K\+M\+And\+Fermion\+Masses}} ()
-\begin{DoxyCompactList}\small\item\em Documentation for the input/output handling. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classRGESolver_a063197d49e4878d86b2d9e5ab6b0b9f8}{Set\+Fermion\+Mass}} (std\+::string name, double val)
-\begin{DoxyCompactList}\small\item\em Setter function for the mass of the fermions. Assignation is allowed only if the inserted value is not negative. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Documentation for the input/output handling. \end{DoxyCompactList}\item 
 double \mbox{\hyperlink{classRGESolver_a55375c02297501cc3ba0302f707a690d}{Get\+Fermion\+Mass}} (std\+::string name)
 \begin{DoxyCompactList}\small\item\em Getter function for the mass of the fermions. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classRGESolver_a7e045398572694648fded4253423705e}{Set\+C\+K\+M\+Angle}} (std\+::string name, double val)
@@ -387,16 +387,9 @@ $\mathrm{Im}(C_{qd8})$ &{\ttfamily Cqd8I} &W\+C7I ~\newline
 
 
 
-Documentation for the input/output handling. 
+Compute C\+KM matrix and the mass of the fermions. 
 
-All the S\+M\+E\+FT coefficients are set using the \mbox{\hyperlink{classRGESolver_adc2b8a9a10216ec5285569c8f24cbed2}{Set\+Coefficient}} methods and accessed with the \mbox{\hyperlink{classRGESolver_a23d5d847021421bc8a9ba03412d2674e}{Get\+Coefficient}} methods. There exist three different signatures for each method, depending on the number of flavour indices of the parameter (0,2,4). ~\newline
-These two routines must be used also for the SM parameters $g_1,g_2,g_3,\lambda,m_h^2,$ $\mathrm{Re}(\mathcal{Y}_u),\mathrm{Im}(\mathcal{Y}_u),$ $\mathrm{Re}(\mathcal{Y}_d),\mathrm{Im}(\mathcal{Y}_d),$ $\mathrm{Re}(\mathcal{Y}_e),\mathrm{Im}(\mathcal{Y}_e)$ (we follow \href{https://arxiv.org/abs/1308.2627}{\texttt{ https\+://arxiv.\+org/abs/1308.\+2627}} for what concerns the conventions in the Higgs\textquotesingle{} sector). ~\newline
-If the user is interested in using the \mbox{\hyperlink{classRGESolver_a7b6c7701ddfa1bd3f6f34e7794fc1dca}{Generate\+S\+M\+Initial\+Conditions}} method, the input for the C\+KM matrix parameters and the fermion masses must be given with the methods \mbox{\hyperlink{classRGESolver_a7e045398572694648fded4253423705e}{Set\+C\+K\+M\+Angle}}, \mbox{\hyperlink{classRGESolver_a74d1c5b7633de682a376204d1788b794}{Set\+C\+K\+M\+Phase}} \mbox{\hyperlink{classRGESolver_a063197d49e4878d86b2d9e5ab6b0b9f8}{Set\+Fermion\+Mass}}. ~\newline
-A complete list of the keys that must be used to correctly invoke setter/getter methods are given in tables \doxytablelink{classRGESolver_SM}{SM} , \doxytablelink{classRGESolver_0F}{0F} , \doxytablelink{classRGESolver_2F}{2F} and \doxytablelink{classRGESolver_4F}{4F}
-
-Compute C\+KM matrix and the mass of the fermions.
-
-The methods \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolve}} and \mbox{\hyperlink{classRGESolver_a7c0c4303beb14f728a70542c8583b3a7}{Evolve\+S\+M\+Only}} do not update the value of C\+KM parameters and fermion masses after the evolution. This process require the diagonalization of the Yukawa matrices and may slow the evolution. ~\newline
+The methods \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolve}} and \mbox{\hyperlink{classRGESolver_a7c0c4303beb14f728a70542c8583b3a7}{Evolve\+S\+M\+Only}} do not update the value of C\+KM parameters and fermion masses after the evolution. This process require the diagonalization of the Yukawa matrices and may slow down the evolution. ~\newline
 If the user is interested in these parameters (accessible with \mbox{\hyperlink{classRGESolver_a1bdc3a8209979b9f4c583b47fc4988d4}{Get\+C\+K\+M\+Angle}}, \mbox{\hyperlink{classRGESolver_a891564c063a942fbd01830b30fa8e6e1}{Get\+C\+K\+M\+Phase}}, \mbox{\hyperlink{classRGESolver_a55375c02297501cc3ba0302f707a690d}{Get\+Fermion\+Mass}}) must invoke this method after the evolution. \mbox{\Hypertarget{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}\label{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}} 
 \index{RGESolver@{RGESolver}!Evolve@{Evolve}}
 \index{Evolve@{Evolve}!RGESolver@{RGESolver}}
@@ -445,14 +438,14 @@ Same as \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolv
 
 
 
-Generates the initial conditions for Standard Model\textquotesingle{}s parameters (gauge couplings, Yukawa coupling, quartic coupling and Higgs\textquotesingle{} boson mass). 
+Generates the initial conditions for Standard Model\textquotesingle{}s parameters (gauge couplings, Yukawa coupling, quartic coupling and Higgs\textquotesingle{} boson mass) at the scale {\ttfamily mu$<$}, using one-\/loop pure SM beta functions. 
 
-After evolving the SM parameters up to the scale mu, C\+KM parameters and fermion masses are updated with the new values. If the flag C\+K\+Minput is set to {\ttfamily true} (default), the input for the Yukawa matrices will be generated from the current value of the C\+KM matrix and the masses of the fermions. If set to false, the current values of the Yukawa matrices will be used to generate the SM initial conditions at the chosen scale. ~\newline
-
+After evolving the SM parameters up to the scale mu, C\+KM parameters and fermion masses are updated with the new values. If the flag C\+K\+Minput is set to {\ttfamily true} (default), the input for the Yukawa matrices will be generated from the current values of the C\+KM matrix and the masses of the fermions. If set to false, the current values of the Yukawa matrices will be used to generate the SM initial conditions at the chosen scale. ~\newline
+The usage of this method with C\+K\+Minput={\ttfamily true} should be restricted to realistic cases, with usual fermion mass hierarchy (smallest mass for the 1st generation and largest mass for the 3rd generation and no mass degeneracy) and with non-\/zero C\+KM matrix angles.
 
 
 \begin{DoxyParams}{Parameters}
-{\em mu} & Scale (in GeV) at which the initial conditions are generated. If {\ttfamily mu} is different from the scale at which the input is given (S\+M\+Input\+Scale), \mbox{\hyperlink{classRGESolver}{R\+G\+E\+Solver}} will use the pure SM R\+G\+Es (at one-\/loop level) to run the parameters to the scale {\ttfamily mu}. \\
+{\em mu} & Scale (in GeV) at which the initial conditions are generate \\
 \hline
 {\em basis} & Flavour basis ( {\ttfamily \char`\"{}\+U\+P\char`\"{}} or {\ttfamily \char`\"{}\+D\+O\+W\+N\char`\"{}}) \\
 \hline
@@ -490,7 +483,7 @@ The selected C\+KM angle.
 Getter function for the C\+KM matrix phase $\delta$. 
 
 \begin{DoxyReturn}{Returns}
-$\delta$. 
+The C\+KM matrix phase $\delta$. 
 \end{DoxyReturn}
 \mbox{\Hypertarget{classRGESolver_a23d5d847021421bc8a9ba03412d2674e}\label{classRGESolver_a23d5d847021421bc8a9ba03412d2674e}} 
 \index{RGESolver@{RGESolver}!GetCoefficient@{GetCoefficient}}
@@ -508,7 +501,7 @@ If the parameter name does not match with any of the parameters, an error messag
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Returns}
-the requested parameter (if it exists), otherwise returns 0. 
+the requested parameter 
 \end{DoxyReturn}
 \mbox{\Hypertarget{classRGESolver_a26a55e4d88d327756d9bd5999d4c6045}\label{classRGESolver_a26a55e4d88d327756d9bd5999d4c6045}} 
 \index{RGESolver@{RGESolver}!GetCoefficient@{GetCoefficient}}
@@ -531,7 +524,7 @@ If the parameter name does not match with any of the parameters or if at least o
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Returns}
-the requested parameter (if it exists), otherwise returns 0. 
+the requested parameter 
 \end{DoxyReturn}
 \mbox{\Hypertarget{classRGESolver_ab4da1b64edf881b585de6bcfd03a2ab5}\label{classRGESolver_ab4da1b64edf881b585de6bcfd03a2ab5}} 
 \index{RGESolver@{RGESolver}!GetCoefficient@{GetCoefficient}}
@@ -558,7 +551,7 @@ If the parameter name does not match with any of the parameters or if at least o
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Returns}
-the requested parameter (if it exists), otherwise returns 0. 
+the requested parameter 
 \end{DoxyReturn}
 \mbox{\Hypertarget{classRGESolver_a55375c02297501cc3ba0302f707a690d}\label{classRGESolver_a55375c02297501cc3ba0302f707a690d}} 
 \index{RGESolver@{RGESolver}!GetFermionMass@{GetFermionMass}}
@@ -575,6 +568,10 @@ Getter function for the mass of the fermions.
 {\em name} & name of the fermion (see table \doxytablelink{classRGESolver_SM}{SM}) \\
 \hline
 \end{DoxyParams}
+\begin{DoxyReturn}{Returns}
+the requested fermion mass ~\newline
+ 
+\end{DoxyReturn}
 \mbox{\Hypertarget{classRGESolver_a9b828a6908004f6680e519b393411f03}\label{classRGESolver_a9b828a6908004f6680e519b393411f03}} 
 \index{RGESolver@{RGESolver}!GetSMInputScale@{GetSMInputScale}}
 \index{GetSMInputScale@{GetSMInputScale}!RGESolver@{RGESolver}}
@@ -619,7 +616,7 @@ Setter function for the C\+KM matrix angles $\theta_{12},\theta_{13},\theta_{23}
 \begin{DoxyParams}{Parameters}
 {\em name} & of the angle (see table \doxytablelink{classRGESolver_SM}{SM}) \\
 \hline
-{\em val} & \\
+{\em val} & its value \\
 \hline
 \end{DoxyParams}
 \mbox{\Hypertarget{classRGESolver_a74d1c5b7633de682a376204d1788b794}\label{classRGESolver_a74d1c5b7633de682a376204d1788b794}} 
@@ -634,7 +631,7 @@ Setter function for the C\+KM matrix phase $\delta$. The assignation is complete
 
 
 \begin{DoxyParams}{Parameters}
-{\em val} & \\
+{\em val} & its value \\
 \hline
 \end{DoxyParams}
 \mbox{\Hypertarget{classRGESolver_adc2b8a9a10216ec5285569c8f24cbed2}\label{classRGESolver_adc2b8a9a10216ec5285569c8f24cbed2}} 
@@ -710,13 +707,18 @@ If the parameter name does not match with any of the parameters or if at least o
 
 
 
+Documentation for the input/output handling. 
+
+All the S\+M\+E\+FT coefficients are set using the \mbox{\hyperlink{classRGESolver_adc2b8a9a10216ec5285569c8f24cbed2}{Set\+Coefficient}} methods and accessed with the \mbox{\hyperlink{classRGESolver_a23d5d847021421bc8a9ba03412d2674e}{Get\+Coefficient}} methods. There exist three different signatures for each method, depending on the number of flavour indices of the parameter (0,2,4). ~\newline
+These two routines must be used also for the SM parameters $g_1,g_2,g_3,\lambda,m_h^2,$ $\mathrm{Re}(\mathcal{Y}_u),\mathrm{Im}(\mathcal{Y}_u),$ $\mathrm{Re}(\mathcal{Y}_d),\mathrm{Im}(\mathcal{Y}_d),$ $\mathrm{Re}(\mathcal{Y}_e),\mathrm{Im}(\mathcal{Y}_e)$ (we follow \href{https://arxiv.org/abs/1308.2627}{\texttt{ https\+://arxiv.\+org/abs/1308.\+2627}} for what concerns the conventions in the Higgs\textquotesingle{} sector). ~\newline
+If the user is interested in using the \mbox{\hyperlink{classRGESolver_a7b6c7701ddfa1bd3f6f34e7794fc1dca}{Generate\+S\+M\+Initial\+Conditions}} method, the input for the C\+KM matrix parameters and the fermion masses must be given with the methods \mbox{\hyperlink{classRGESolver_a7e045398572694648fded4253423705e}{Set\+C\+K\+M\+Angle}}, \mbox{\hyperlink{classRGESolver_a74d1c5b7633de682a376204d1788b794}{Set\+C\+K\+M\+Phase}} \mbox{\hyperlink{classRGESolver_a063197d49e4878d86b2d9e5ab6b0b9f8}{Set\+Fermion\+Mass}}. ~\newline
+A complete list of the keys that must be used to correctly invoke setter/getter methods are given in tables \doxytablelink{classRGESolver_SM}{SM} , \doxytablelink{classRGESolver_0F}{0F} , \doxytablelink{classRGESolver_2F}{2F} and \doxytablelink{classRGESolver_4F}{4F}
+
 Setter function for the mass of the fermions. Assignation is allowed only if the inserted value is not negative. 
-
-
 \begin{DoxyParams}{Parameters}
 {\em name} & name of the fermion (see table \doxytablelink{classRGESolver_SM}{SM}) \\
 \hline
-{\em val} & \\
+{\em val} & its value \\
 \hline
 \end{DoxyParams}
 \mbox{\Hypertarget{classRGESolver_ad47f4773fa7eaf4bb9bc3cb15de5b2c2}\label{classRGESolver_ad47f4773fa7eaf4bb9bc3cb15de5b2c2}} 
