--- a/latex/classRGESolver.tex
+++ b/latex/classRGESolver.tex
@@ -46,10 +46,9 @@ void \mbox{\hyperlink{classRGESolver_a51938deb00fbca684c8e4e5b10a239ad}{Set\+\_\
 void \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolve}} (std\+::string method, double muI, double muF)
 \begin{DoxyCompactList}\small\item\em Performs the R\+GE evolution. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classRGESolver_a7b6c7701ddfa1bd3f6f34e7794fc1dca}{Generate\+S\+M\+Initial\+Conditions}} (double mu, std\+::string basis, std\+::string method, bool input\+C\+KM=true)
-\begin{DoxyCompactList}\small\item\em Generates the initial conditions for Standard Model\textquotesingle{}s parameters (gauge couplings, Yukawa coupling, quartic coupling and Higgs\textquotesingle{} boson mass) at the scale {\ttfamily mu$<$}, using one-\/loop pure SM beta functions. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Generates the initial conditions for Standard Model\textquotesingle{}s parameters (gauge couplings, Yukawa coupling, quartic coupling and Higgs\textquotesingle{} boson mass) at the scale {\ttfamily mu}, using one-\/loop pure SM beta functions. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classRGESolver_a7c0c4303beb14f728a70542c8583b3a7}{Evolve\+S\+M\+Only}} (std\+::string method, double muI, double muF)
-\begin{DoxyCompactList}\small\item\em Same as \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolve}}, but only for the SM parameters. The user should use this method instead of \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolve}} when interested in pure SM running. ~\newline
- \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Same as \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolve}}, but only for the SM parameters. The user should use this method instead of \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolve}} when interested in pure SM running. Using this function is the same of using \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolve}} with all the S\+M\+E\+FT coefficients set to 0, but it is faster since it does compute only the evolution for the SM parameters. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classRGESolver_ad499b4ef512ac892c4f5a71b9fa0daf4}{Compute\+C\+K\+M\+And\+Fermion\+Masses}} ()
 \begin{DoxyCompactList}\small\item\em Compute C\+KM matrix and the mass of the fermions. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \end{Indent}
@@ -60,7 +59,7 @@ void \mbox{\hyperlink{classRGESolver_ad499b4ef512ac892c4f5a71b9fa0daf4}{Compute\
 void \mbox{\hyperlink{classRGESolver_a063197d49e4878d86b2d9e5ab6b0b9f8}{Set\+Fermion\+Mass}} (std\+::string name, double val)
 \begin{DoxyCompactList}\small\item\em Documentation for the input/output handling. \end{DoxyCompactList}\item 
 double \mbox{\hyperlink{classRGESolver_a55375c02297501cc3ba0302f707a690d}{Get\+Fermion\+Mass}} (std\+::string name)
-\begin{DoxyCompactList}\small\item\em Getter function for the mass of the fermions. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Getter function for the mass of the fermions (in GeV). \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classRGESolver_a7e045398572694648fded4253423705e}{Set\+C\+K\+M\+Angle}} (std\+::string name, double val)
 \begin{DoxyCompactList}\small\item\em Setter function for the C\+KM matrix angles $\theta_{12},\theta_{13},\theta_{23}$. The assignation is completed only if the inserted angle is $\in [0,\frac{\pi}{2}]$. \end{DoxyCompactList}\item 
 double \mbox{\hyperlink{classRGESolver_a1bdc3a8209979b9f4c583b47fc4988d4}{Get\+C\+K\+M\+Angle}} (std\+::string name)
@@ -70,7 +69,7 @@ void \mbox{\hyperlink{classRGESolver_a74d1c5b7633de682a376204d1788b794}{Set\+C\+
 double \mbox{\hyperlink{classRGESolver_a891564c063a942fbd01830b30fa8e6e1}{Get\+C\+K\+M\+Phase}} ()
 \begin{DoxyCompactList}\small\item\em Getter function for the C\+KM matrix phase $\delta$. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classRGESolver_ad47f4773fa7eaf4bb9bc3cb15de5b2c2}{Set\+S\+M\+Input\+Scale}} (double mu)
-\begin{DoxyCompactList}\small\item\em Setter method for the scale at which the method \mbox{\hyperlink{classRGESolver_a7b6c7701ddfa1bd3f6f34e7794fc1dca}{Generate\+S\+M\+Initial\+Conditions}} takes the input values for SM parameters. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Setter method for the scale at which the method \mbox{\hyperlink{classRGESolver_a7b6c7701ddfa1bd3f6f34e7794fc1dca}{Generate\+S\+M\+Initial\+Conditions}} takes the input values (in GeV). for SM parameters. \end{DoxyCompactList}\item 
 double \mbox{\hyperlink{classRGESolver_a9b828a6908004f6680e519b393411f03}{Get\+S\+M\+Input\+Scale}} ()
 \begin{DoxyCompactList}\small\item\em Getter method for the scale at which the method \mbox{\hyperlink{classRGESolver_a7b6c7701ddfa1bd3f6f34e7794fc1dca}{Generate\+S\+M\+Initial\+Conditions}} takes the input values for SM parameters. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classRGESolver_adc2b8a9a10216ec5285569c8f24cbed2}{Set\+Coefficient}} (std\+::string name, double val)
@@ -405,9 +404,10 @@ R\+G\+Es are solved with the chosen method from {\ttfamily muI} to {\ttfamily mu
 \begin{DoxyParams}{Parameters}
 {\em method} & resolution method \\
 \hline
-{\em muI} & initial energy scale \\
+{\em muI} & initial energy scale (in GeV) \\
 \hline
-{\em muF} & final energy scale \\
+{\em muF} & final energy scale (in GeV) ~\newline
+ \\
 \hline
 \end{DoxyParams}
 \mbox{\Hypertarget{classRGESolver_a7c0c4303beb14f728a70542c8583b3a7}\label{classRGESolver_a7c0c4303beb14f728a70542c8583b3a7}} 
@@ -418,16 +418,15 @@ R\+G\+Es are solved with the chosen method from {\ttfamily muI} to {\ttfamily mu
 
 
 
-Same as \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolve}}, but only for the SM parameters. The user should use this method instead of \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolve}} when interested in pure SM running. ~\newline
- 
+Same as \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolve}}, but only for the SM parameters. The user should use this method instead of \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolve}} when interested in pure SM running. Using this function is the same of using \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolve}} with all the S\+M\+E\+FT coefficients set to 0, but it is faster since it does compute only the evolution for the SM parameters. 
 
 
 \begin{DoxyParams}{Parameters}
 {\em method} & resolution method \\
 \hline
-{\em muI} & initial energy scale \\
+{\em muI} & initial energy scale (in GeV) \\
 \hline
-{\em muF} & final energy scale \\
+{\em muF} & final energy scale (in GeV) \\
 \hline
 \end{DoxyParams}
 \mbox{\Hypertarget{classRGESolver_a7b6c7701ddfa1bd3f6f34e7794fc1dca}\label{classRGESolver_a7b6c7701ddfa1bd3f6f34e7794fc1dca}} 
@@ -438,10 +437,11 @@ Same as \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolv
 
 
 
-Generates the initial conditions for Standard Model\textquotesingle{}s parameters (gauge couplings, Yukawa coupling, quartic coupling and Higgs\textquotesingle{} boson mass) at the scale {\ttfamily mu$<$}, using one-\/loop pure SM beta functions. 
+Generates the initial conditions for Standard Model\textquotesingle{}s parameters (gauge couplings, Yukawa coupling, quartic coupling and Higgs\textquotesingle{} boson mass) at the scale {\ttfamily mu}, using one-\/loop pure SM beta functions. 
 
-After evolving the SM parameters up to the scale mu, C\+KM parameters and fermion masses are updated with the new values. If the flag C\+K\+Minput is set to {\ttfamily true} (default), the input for the Yukawa matrices will be generated from the current values of the C\+KM matrix and the masses of the fermions. If set to false, the current values of the Yukawa matrices will be used to generate the SM initial conditions at the chosen scale. ~\newline
-The usage of this method with C\+K\+Minput={\ttfamily true} should be restricted to realistic cases, with usual fermion mass hierarchy (smallest mass for the 1st generation and largest mass for the 3rd generation and no mass degeneracy) and with non-\/zero C\+KM matrix angles.
+If the flag C\+K\+Minput is set to {\ttfamily true} (default), the input for the Yukawa matrices will be generated from the current values of the C\+KM matrix and the masses of the fermions. If set to false, the current values of the Yukawa matrices will be used to generate the SM initial conditions at the chosen scale. ~\newline
+The usage of this method with C\+K\+Minput={\ttfamily true} should be restricted to realistic cases, with usual fermion mass hierarchy (smallest mass for the 1st generation and largest mass for the 3rd generation and no mass degeneracy) and with non-\/zero C\+KM matrix angles. ~\newline
+For more particular cases, the user should set C\+K\+Minput={\ttfamily false} and set the input in terms of the Yukawa matrices.
 
 
 \begin{DoxyParams}{Parameters}
@@ -561,7 +561,7 @@ the requested parameter
 
 
 
-Getter function for the mass of the fermions. 
+Getter function for the mass of the fermions (in GeV). 
 
 
 \begin{DoxyParams}{Parameters}
@@ -583,7 +583,7 @@ the requested fermion mass ~\newline
 Getter method for the scale at which the method \mbox{\hyperlink{classRGESolver_a7b6c7701ddfa1bd3f6f34e7794fc1dca}{Generate\+S\+M\+Initial\+Conditions}} takes the input values for SM parameters. 
 
 \begin{DoxyReturn}{Returns}
-{\ttfamily Input\+Scale\+\_\+\+SM} 
+{\ttfamily Input\+Scale\+\_\+\+SM} (in GeV). 
 \end{DoxyReturn}
 \mbox{\Hypertarget{classRGESolver_ab6a813bff78d9278d3b875ea9c2f5324}\label{classRGESolver_ab6a813bff78d9278d3b875ea9c2f5324}} 
 \index{RGESolver@{RGESolver}!SaveOutputFile@{SaveOutputFile}}
@@ -714,7 +714,7 @@ These two routines must be used also for the SM parameters $g_1,g_2,g_3,\lambda,
 If the user is interested in using the \mbox{\hyperlink{classRGESolver_a7b6c7701ddfa1bd3f6f34e7794fc1dca}{Generate\+S\+M\+Initial\+Conditions}} method, the input for the C\+KM matrix parameters and the fermion masses must be given with the methods \mbox{\hyperlink{classRGESolver_a7e045398572694648fded4253423705e}{Set\+C\+K\+M\+Angle}}, \mbox{\hyperlink{classRGESolver_a74d1c5b7633de682a376204d1788b794}{Set\+C\+K\+M\+Phase}} \mbox{\hyperlink{classRGESolver_a063197d49e4878d86b2d9e5ab6b0b9f8}{Set\+Fermion\+Mass}}. ~\newline
 A complete list of the keys that must be used to correctly invoke setter/getter methods are given in tables \doxytablelink{classRGESolver_SM}{SM} , \doxytablelink{classRGESolver_0F}{0F} , \doxytablelink{classRGESolver_2F}{2F} and \doxytablelink{classRGESolver_4F}{4F}
 
-Setter function for the mass of the fermions. Assignation is allowed only if the inserted value is not negative. 
+Setter function for the mass of the fermions (in GeV). Assignation is allowed only if the inserted value is not negative. 
 \begin{DoxyParams}{Parameters}
 {\em name} & name of the fermion (see table \doxytablelink{classRGESolver_SM}{SM}) \\
 \hline
@@ -729,7 +729,7 @@ Setter function for the mass of the fermions. Assignation is allowed only if the
 
 
 
-Setter method for the scale at which the method \mbox{\hyperlink{classRGESolver_a7b6c7701ddfa1bd3f6f34e7794fc1dca}{Generate\+S\+M\+Initial\+Conditions}} takes the input values for SM parameters. 
+Setter method for the scale at which the method \mbox{\hyperlink{classRGESolver_a7b6c7701ddfa1bd3f6f34e7794fc1dca}{Generate\+S\+M\+Initial\+Conditions}} takes the input values (in GeV). for SM parameters. 
 
 
 \begin{DoxyParams}{Parameters}
