--- a/latex/classRGESolver.tex
+++ b/latex/classRGESolver.tex
@@ -57,7 +57,7 @@ void \mbox{\hyperlink{classRGESolver_ad499b4ef512ac892c4f5a71b9fa0daf4}{Compute\
  }\begin{DoxyCompactItemize}
 \item 
 void \mbox{\hyperlink{classRGESolver_a063197d49e4878d86b2d9e5ab6b0b9f8}{Set\+Fermion\+Mass}} (std\+::string name, double val)
-\begin{DoxyCompactList}\small\item\em Documentation for the input/output handling. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Setter function for the mass of the fermions (in GeV). Assignation is allowed only if the inserted value is not negative. \end{DoxyCompactList}\item 
 double \mbox{\hyperlink{classRGESolver_a55375c02297501cc3ba0302f707a690d}{Get\+Fermion\+Mass}} (std\+::string name)
 \begin{DoxyCompactList}\small\item\em Getter function for the mass of the fermions (in GeV). \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classRGESolver_a7e045398572694648fded4253423705e}{Set\+C\+K\+M\+Angle}} (std\+::string name, double val)
@@ -95,12 +95,15 @@ void \mbox{\hyperlink{classRGESolver_ab6a813bff78d9278d3b875ea9c2f5324}{Save\+Ou
 \doxysubsection{Detailed Description}
 A class that performs renormalization group evolution in the context of the S\+M\+E\+FT. 
 
-The class solves the Renormalization Group Equations (R\+G\+Es) both numerically and in the leading-\/log approximation. Only operators up to dimension six that preserve lepton and baryon numbers are considered. The operator basis is the Warsaw basis, defined in \href{https://arxiv.org/abs/1008.4884}{\texttt{ https\+://arxiv.\+org/abs/1008.\+4884}}. ~\newline
- The user must set separately real and imaginary part of each complex parameter. ~\newline
- In tables \doxytablelink{classRGESolver_SM}{SM}, \doxytablelink{classRGESolver_0F}{0F}, \doxytablelink{classRGESolver_2F}{2F} and \doxytablelink{classRGESolver_4F}{4F} we list all the parameters, together with their names (that must be used to correctly invoke getter and setter functions). ~\newline
-The numerical integration is performed with an adaptive step-\/size routine (the explicit embedded Runge-\/\+Kutta-\/\+Fehlberg method), using the tools in the G\+NU Scientific Library. ~\newline
- See \href{https://www.gnu.org/software/gsl/doc/html/ode-initval.html}{\texttt{ https\+://www.\+gnu.\+org/software/gsl/doc/html/ode-\/initval.\+html}} for all the details. ~\newline
-The accuracy level of the numerical integration can be tuned selecting the parameters $\epsilon_{rel}, \epsilon_{abs}$ and the integration step using the dedicated setter functions.
+The class solves the Renormalization Group Equations (R\+G\+Es) both numerically and in the leading-\/log approximation. Only operators up to dimension six that preserve lepton and baryon numbers are considered. The operator basis is the Warsaw basis, defined in \href{https://arxiv.org/abs/1008.4884}{\texttt{ https\+://arxiv.\+org/abs/1008.\+4884}}. The class splits real and imaginary part of each complex parameter. ~\newline
+ ~\newline
+ The numerical integration is performed with an adaptive step-\/size routine (the explicit embedded Runge-\/\+Kutta-\/\+Fehlberg method), using the tools in the G\+NU Scientific Library. See \href{https://www.gnu.org/software/gsl/doc/html/ode-initval.html}{\texttt{ https\+://www.\+gnu.\+org/software/gsl/doc/html/ode-\/initval.\+html}} for all the details. ~\newline
+ The accuracy level of the numerical integration can be tuned selecting the parameters $\epsilon_{rel}, \epsilon_{abs}$ and the integration step using the dedicated setter functions. ~\newline
+ ~\newline
+ All the S\+M\+E\+FT coefficients are set using the \mbox{\hyperlink{classRGESolver_adc2b8a9a10216ec5285569c8f24cbed2}{Set\+Coefficient}} methods and accessed with the \mbox{\hyperlink{classRGESolver_a23d5d847021421bc8a9ba03412d2674e}{Get\+Coefficient}} methods. There exist three different signatures for each method, depending on the number of flavour indices of the parameter (0,2,4). ~\newline
+ These two routines must be used also for the SM parameters $g_1,g_2,g_3,\lambda,m_h^2,$ $\mathrm{Re}(\mathcal{Y}_u),\mathrm{Im}(\mathcal{Y}_u),$ $\mathrm{Re}(\mathcal{Y}_d),\mathrm{Im}(\mathcal{Y}_d),$ $\mathrm{Re}(\mathcal{Y}_e),\mathrm{Im}(\mathcal{Y}_e)$ (we follow \href{https://arxiv.org/abs/1308.2627}{\texttt{ https\+://arxiv.\+org/abs/1308.\+2627}} for what concerns the conventions in the Higgs\textquotesingle{} sector). ~\newline
+ If the user is interested in using the \mbox{\hyperlink{classRGESolver_a7b6c7701ddfa1bd3f6f34e7794fc1dca}{Generate\+S\+M\+Initial\+Conditions}} method, the input for the C\+KM matrix parameters and the fermion masses must be given with the methods \mbox{\hyperlink{classRGESolver_a7e045398572694648fded4253423705e}{Set\+C\+K\+M\+Angle}}, \mbox{\hyperlink{classRGESolver_a74d1c5b7633de682a376204d1788b794}{Set\+C\+K\+M\+Phase}} \mbox{\hyperlink{classRGESolver_a063197d49e4878d86b2d9e5ab6b0b9f8}{Set\+Fermion\+Mass}}. ~\newline
+ A complete list of the keys that must be used to correctly invoke setter/getter methods are given in tables \doxytablelink{classRGESolver_SM}{SM}, \doxytablelink{classRGESolver_0F}{0F}, \doxytablelink{classRGESolver_2F}{2F} and \doxytablelink{classRGESolver_4F}{4F}.
 
 \begin{DoxyAuthor}{Author}
 S. Di Noi, L. Silvestrini. 
@@ -109,7 +112,7 @@ S. Di Noi, L. Silvestrini.
 G\+NU General Public License \hypertarget{classRGESolver_SM}{}
 \tabulinesep=1mm
 \begin{longtabu}spread 0pt [c]{*{2}{|X[-1]}|}
-\caption{Standard Model parameters. The parameters in the left column must be set (and accessed) with \textbackslash{}ref Set\+Coefficient (and \textbackslash{}ref Get\+Coefficient) methods. The ones in the right column must be set and accessed using other dedicated methods (see the specific documentation for input/output) }\label{classRGESolver_SM}\\
+\caption{Standard Model parameters. }\label{classRGESolver_SM}\\
 \hline
 {\begin{tabularx}{\linewidth}{|*{2}{>{\raggedright\arraybackslash}X|}}\hline
 \cellcolor{\tableheadbgcolor}\textbf{ Parameter }&\cellcolor{\tableheadbgcolor}\textbf{ Name ~\newline
@@ -172,7 +175,7 @@ $m_{\tau}$ $[\mathrm{GeV}]$ &{\ttfamily mtau} ~\newline
 \hypertarget{classRGESolver_0F}{}
 \tabulinesep=1mm
 \begin{longtabu}spread 0pt [c]{*{2}{|X[-1]}|}
-\caption{Scalar (and real) S\+M\+E\+FT operators. They must be set and accessed using \textbackslash{}ref Set\+Coefficient and \textbackslash{}ref Get\+Coefficient. }\label{classRGESolver_0F}\\
+\caption{Scalar (and real) S\+M\+E\+FT operators. }\label{classRGESolver_0F}\\
 \hline
 {\begin{tabularx}{\linewidth}{|*{2}{>{\raggedright\arraybackslash}X|}}\hline
 \multicolumn{2}{|l|}{\cellcolor{\tableheadbgcolor}\textbf{ Classes 1-\/3 }}\\\cline{1-2}
@@ -216,7 +219,7 @@ $C_{H\tilde{W}B}$ &{\ttfamily C\+H\+WtildeB} \\\cline{1-2}
 \hypertarget{classRGESolver_2F}{}
 \tabulinesep=1mm
 \begin{longtabu}spread 0pt [c]{*{3}{|X[-1]}|}
-\caption{2F S\+M\+E\+FT operators. They must be set and accessed using \textbackslash{}ref Set\+Coefficient and \textbackslash{}ref Get\+Coefficient. }\label{classRGESolver_2F}\\
+\caption{2F S\+M\+E\+FT operators. }\label{classRGESolver_2F}\\
 \hline
 {\begin{tabularx}{\linewidth}{|*{3}{>{\raggedright\arraybackslash}X|}}\hline
 \multicolumn{3}{|l|}{\cellcolor{\tableheadbgcolor}\textbf{ Class 5 ~\newline
@@ -287,7 +290,7 @@ $\mathrm{Im}(C_{Hud})$ &{\ttfamily C\+HudI} &W\+C1 ~\newline
 \hypertarget{classRGESolver_4F}{}
 \tabulinesep=1mm
 \begin{longtabu}spread 0pt [c]{*{3}{|X[-1]}|}
-\caption{4F S\+M\+E\+FT Operators. They must be set and accessed using \textbackslash{}ref Set\+Coefficient and \textbackslash{}ref Get\+Coefficient.}\label{classRGESolver_4F}\\
+\caption{4F S\+M\+E\+FT Operators.}\label{classRGESolver_4F}\\
 \hline
 {\begin{tabularx}{\linewidth}{|*{3}{>{\raggedright\arraybackslash}X|}}\hline
 \multicolumn{3}{|l|}{\cellcolor{\tableheadbgcolor}\textbf{ Class 8 $(\bar{L}L)(\bar{L}L)$ ~\newline
@@ -707,14 +710,9 @@ If the parameter name does not match with any of the parameters or if at least o
 
 
 
-Documentation for the input/output handling. 
-
-All the S\+M\+E\+FT coefficients are set using the \mbox{\hyperlink{classRGESolver_adc2b8a9a10216ec5285569c8f24cbed2}{Set\+Coefficient}} methods and accessed with the \mbox{\hyperlink{classRGESolver_a23d5d847021421bc8a9ba03412d2674e}{Get\+Coefficient}} methods. There exist three different signatures for each method, depending on the number of flavour indices of the parameter (0,2,4). ~\newline
-These two routines must be used also for the SM parameters $g_1,g_2,g_3,\lambda,m_h^2,$ $\mathrm{Re}(\mathcal{Y}_u),\mathrm{Im}(\mathcal{Y}_u),$ $\mathrm{Re}(\mathcal{Y}_d),\mathrm{Im}(\mathcal{Y}_d),$ $\mathrm{Re}(\mathcal{Y}_e),\mathrm{Im}(\mathcal{Y}_e)$ (we follow \href{https://arxiv.org/abs/1308.2627}{\texttt{ https\+://arxiv.\+org/abs/1308.\+2627}} for what concerns the conventions in the Higgs\textquotesingle{} sector). ~\newline
-If the user is interested in using the \mbox{\hyperlink{classRGESolver_a7b6c7701ddfa1bd3f6f34e7794fc1dca}{Generate\+S\+M\+Initial\+Conditions}} method, the input for the C\+KM matrix parameters and the fermion masses must be given with the methods \mbox{\hyperlink{classRGESolver_a7e045398572694648fded4253423705e}{Set\+C\+K\+M\+Angle}}, \mbox{\hyperlink{classRGESolver_a74d1c5b7633de682a376204d1788b794}{Set\+C\+K\+M\+Phase}} \mbox{\hyperlink{classRGESolver_a063197d49e4878d86b2d9e5ab6b0b9f8}{Set\+Fermion\+Mass}}. ~\newline
-A complete list of the keys that must be used to correctly invoke setter/getter methods are given in tables \doxytablelink{classRGESolver_SM}{SM} , \doxytablelink{classRGESolver_0F}{0F} , \doxytablelink{classRGESolver_2F}{2F} and \doxytablelink{classRGESolver_4F}{4F}
-
 Setter function for the mass of the fermions (in GeV). Assignation is allowed only if the inserted value is not negative. 
+
+
 \begin{DoxyParams}{Parameters}
 {\em name} & name of the fermion (see table \doxytablelink{classRGESolver_SM}{SM}) \\
 \hline
