--- a/latex/index.tex
+++ b/latex/index.tex
@@ -9,7 +9,11 @@
 \item {\ttfamily G\+SL} \+: The G\+NU Scientific Library (G\+SL) is a C library for numerical computations. It can be found on the \href{https://www.gnu.org/software/gsl/}{\texttt{ {\ttfamily G\+SL} website}}. Most Linux package managers will have a stable version as will any ports for Mac.
 \item {\ttfamily C++11} \+: A compiler that supports at least {\ttfamily C++11} standard is required. 
 \end{DoxyItemize}\hypertarget{index_autotoc_md2}{}\doxysection{Installation}\label{index_autotoc_md2}
-The installation of {\ttfamily \mbox{\hyperlink{classRGESolver}{R\+G\+E\+Solver}}} requires the availability of {\ttfamily C\+Make} in the system (version {\ttfamily 3.\+1} or greater). A description of {\ttfamily C\+Make} and the instructions for its installation can be found in the \href{https://cmake.org/}{\texttt{ {\ttfamily C\+Make}website}}.
+The installation of {\ttfamily \mbox{\hyperlink{classRGESolver}{R\+G\+E\+Solver}}} requires the availability of {\ttfamily C\+Make} in the system (version {\ttfamily 3.\+1} or greater). A description of {\ttfamily C\+Make} and the instructions for its installation can be found in the \href{https://cmake.org/}{\texttt{ {\ttfamily C\+Make}website}}. Clone the repository with 
+\begin{DoxyCode}{0}
+\DoxyCodeLine{git clone https://github.com/silvest/RGESolver -\/-\/recursively}
+\end{DoxyCode}
+
 
 The installation can be performed writhing the following lines in a terminal session (in the {\ttfamily \mbox{\hyperlink{classRGESolver}{R\+G\+E\+Solver}}} directory)\+: 
 \begin{DoxyCode}{0}
